k8s/development/api-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v2
  namespace: development
  labels:
    app: simple-crud
    component: api-v2
    environment: development
spec:
  selector:
    matchLabels:
      app: simple-crud
      component: api-v2
      environment: development
  replicas: 1
  template:
    metadata:
      labels:
        app: simple-crud
        component: api-v2
        environment: development
    spec:
      containers:
        - name: api-v2
          image: dosquisd/simple_crud:2.0
          ports:
            - containerPort: 8000

          # Health checks
          readinessProbe:
            httpGet:
              path: /api/v2/health
              port: 8000
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20

          # Resources
          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "500m"
