k8s/development/debug-pod.yaml
# debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: development
spec:
  containers:
  - name: debug
    image: ubuntu:latest
    command: ["sleep", "infinity"]
