k8s/development/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: development
  labels:
    app: simple-crud
    component: postgres
    environment: development
spec:
  selector:
    matchLabels:
      app: postgres
      component: postgres
  replicas: 1
  serviceName: postgres-service
  template:
    metadata:
      labels:
        app: postgres
        component: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine

        # Environment variables for PostgreSQL
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
          initialDelaySeconds: 30
          periodSeconds: 10

        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
          initialDelaySeconds: 30
          periodSeconds: 30

        # Port configuration
        ports:
        - containerPort: 5432
          name: postgres
        
        # Volume configuration
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
      labels:
        app: simple-crud
        component: postgres
        environment: development
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
