k8s/development/api-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-v1-service
  namespace: development
  labels:
    app: simple-crud
    component: api-v1
    environment: development
spec:
  type: ClusterIP
  selector:
    app: simple-crud
    component: api-v1
    environment: development
  ports:
  - port: 8000
    targetPort: 8000

# Para probar el servicio, se pueden usar muchos comandos, por ejemplo:
# kubectl port-forward service/api-service 8000:8000 --namespace development
# Si se está usando minikube, como hice durante todo esta practica, está este otro:
# minikube service api-service --url --namespace development
# Y luego tirar este otro comando para comprobar que todo funciona
# curl http://localhost:8000/health
