k8s/development/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: development
  labels:
    app: simple-crud
    component: grafana
    environment: development
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
  selector:
    app: simple-crud
    component: grafana
    environment: development
  sessionAffinity: None
  type: LoadBalancer
