k8s/development/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: development
  labels:
    app: simple-crud
    component: postgres
    environment: development
spec:
  type: ClusterIP
  selector:
    app: postgres
    component: postgres
  ports:
  - port: 5432
    targetPort: 5432
