k8s/development/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: development
  labels:
    app: simple-crud
    component: redis
    environment: development
spec:
  type: ClusterIP
  selector:
    app: redis
    component: redis
    environment: development
  ports:
  - port: 6379
    targetPort: 6379
