k8s/development/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: development
  labels:
    app.kubernetes.io/name: api-ingress
    component: api-ingress
    environment: development
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/v1"
        backend:
          service:
            name: api-v1-service
            port: 
              number: 8000
      - pathType: Prefix
        path: "/api/v2"
        backend:
          service:
            name: api-v2-service
            port:
              number: 8000
